objects/hic_signeasy__Sign_Document__c.object
<CustomObject>
    <fields>
        <fullName>hic_signeasy__Content_Document_Id__c</fullName>
        <label>Content Document Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hic_signeasy__Content_Version_Id__c</fullName>
        <label>Content Version Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hic_signeasy__Document_Order__c</fullName>
        <label>Document Order</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>hic_signeasy__Sign_Transaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sign Transaction</label>
        <referenceTo>hic_signeasy__Transaction__c</referenceTo>
        <relationshipLabel>Sign Documents</relationshipLabel>
        <relationshipName>Sign_Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>hic_signeasy__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Original</fullName>
                </value>
                <value>
                    <fullName>Final</fullName>
                </value>
                <value>
                    <fullName>Signer_Attachment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Sign Document</label>
    <listViews>
        <fullName>hic_signeasy__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Sign Document Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sign Documents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>